# advent-of-code-2020

./: README.md
python/: .gitignore  Makefile  pyproject.toml
python/01/: Makefile  pyproject.toml
python/01/challenge/: __main__.py  expenses.py  test_expenses.py
python/day01/: __main__.py  expenses.py  test_expenses.py
python/day02/: __main__.py  string_processing.py  test_string_processing.py
python/day03/: __main__.py  _types.py  constants.py  navigate.py  test_navigate.py
python/day04/: __main__.py  constants.py  passport.py  test_passport.py
python/day05/: __main__.py  seating.py  test_seating.py
python/day06/: __main__.py  declarations.py  test_declarations.py
python/utils/: inputs.py  test_inputs.py
rust/advent-of-code-2020/: Cargo.toml
rust/advent-of-code-2020/src/: day01.rs  lib.rs
