[tool.poetry]
name = "advent-of-code-2020-01"
version = "0.1.0"
description = ""
authors = ["Dom Weldon <dom.weldon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]
bpython = "^0.20.1"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
